--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,9 @@
 <body>
 <div class="container">
 <h2 class="page-header">Dashboard</h2>
+
 <p>Welcome to your dashboard, Say hi to your friends by clicking on hi</p>
+<p>register and login with other account in the new tab to see exchange of messages(in other tab if dashboard appears then logout and then register and login) </p>
 <p><input type="button" value="Hi" id="hi" /></p>
 <p id='messages'></p>
 <h3>history of conversation:</h3>
